feat: test migration